# dev_sandbox

./: .gitignore  .replit  Cargo.toml  README.md  bun.lockb  bunfig.toml  current.sh  current2.sh  features.yml  go.mod  go.sum  go.work  go.work.sum  new_project.sh  package.json  pyproject.toml  replit.nix  run.sh  sandbox_run.bash  sandbox_run.fish
apps/go/app/: go.mod  justfile  replit.nix
apps/go/replit_modules/: justfile  main.go  updater.go
apps/go/sandbox/: .air.toml  go.mod  go.sum  projects.go
apps/node/html/: .yarnrc.yml  index.html  justfile  package.json  style.css  tailwind.config.js  vite.config.js
apps/node/react/: .replit  index.html  justfile  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/python/calculator/: .gitignore  pyproject.toml
apps/python/django/: justfile
apps/rust/calculator/: justfile
apps/rust/minigrep/: Cargo.toml  (+1 more)
backend/: go.mod  hello_test.go  justfile  main.go
bun /: .replit  package.json
c/: .replit  Makefile  replit.toml
cli/minigrep/: .gitignore
cli/replit_modules/: go.mod
frontend/: index.html  justfile
frontend/src/: index.tsx
go/: .replit  replit.toml
javascript/: CHANGELOG.md  js_sandbox.js  sandbox.js
node/React Sandbox Utils/: .replit  package.json
node/react/: .replit  package.json  tsconfig.json  vite.config.ts
node/redwoodblog/: run.sh
node/vue/: tsconfig.json
nodejs/: .replit  CHANGELOG.md  package.json  run.sh
nodejs/src/: index.js
python/: .replit  CHANGELOG.md
python/calculator/: .replit  Makefile  pyproject.toml  run.sh
python/calculator/src/: calculator.py  game.py  main.py  test_calculator.py
python/calculator/src/calc/: calc.py  main.py
python/calculator/tests/: __init__.py  test_calc.py
python/django/: .replit
python/src/: main.py
ruby/: .gitignore  .replit  replit.toml
ruby/calculator/: .gitignore  Gemfile  run.sh
ruby/src/: main.rb
rust/calculator/: Cargo.toml  run.sh
rust/guessing_game/: .gitignore  .replit
rust/sandbox_utils/: .gitignore  .replit  Cargo.toml
rust/variables/: Cargo.toml
templates/go/: .gitignore  run.sh
templates/nodejs/: .gitignore  package.json
templates/python/: .replit
templates/python/app/: .replit  pyproject.toml
templates/python/app/src/hello/: hello.py  main.py
templates/python/app/tests/: test_hello.py
templates/ruby/: .gitignore
templates/rust/: .replit
typescript/redwoodblog/: replit.nix
(+136 files in other folders)
