[tool.poetry]
name = "devsandbox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "8.1.1"
mypy = "1.9.0"
pyright = "1.1.354"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
