[tool.poetry]
name = "hello"
version = "1.0.0"
description = ""
authors = ["Maksym Litvynov <1058433+rxx@users.noreply.github.com>"]
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-mock = "*"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
